tests/data_structures/dictionary.out
Error in ..\tests\data_structures\dictionary.sld:86:8: A struct named KeyValuePair was already declared.
